--- a/ROOM335/pages/Aryan.html
+++ b/ROOM335/pages/Aryan.html
@@ -6,7 +6,6 @@
     <title>ROOM 335</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P|Source Code Pro">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined" />
     <link rel='stylesheet' type='text/css' media='screen' href='/style/main2.css'>
 </head>
 <body>
@@ -17,19 +16,19 @@
         </div>
         <div class="grid-item item2">
             <div class="profile-img">
-                <img src="/assets/alok.jpeg">
+                <img src="/assets/aryan.jpeg">
             </div>
         </div>
         <div class="grid-item item3">
-            <p>Alok Singh Negi</p>
-            <p>From Uttarkashi, Uttarakhand</p>
+            <p>Aryan Mishra</p>
+            <p>From Azamgarh, Utter Pradesh</p>
             <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
         </div>
         <div class="grid-item item4">
-            <p><a href="https://www.instagram.com/alok_negi_10/" class="shed">Instagram</a></p>
-            <p><a href="https://github.com/aloknegi786" class="shed">Github</a></p>
+            <p><a href="https://www.instagram.com/aryan_mishra_jii" class="shed">Instagram</a></p>
+            <p><a href="" class="shed">Github</a></p>
             <p><a href="" class="shed">Linkedin</a></p>
-            <p><a href="https://codeforces.com/profile/SLEDGER" class="shed">Codeforces</a></p>
+            <p><a href="https://codeforces.com/profile/MANFORCE_MNNIT" class="shed">Codeforces</a></p>
         </div>
         <div class="grid-item item5"></div>
         
