--- a/ROOM335/index.html
+++ b/ROOM335/index.html
@@ -6,10 +6,10 @@
     <title>ROOM 335</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-    <link rel='stylesheet' type='text/css' media='screen' href='/style/main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='./style/main.css'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P|Source Code Pro">
-    <script src='main.js'></script>
+    <script src='./main.js'></script>
 </head>
 <body>    
     <header>
