--- a/ROOM335/index.html
+++ b/ROOM335/index.html
@@ -29,36 +29,36 @@
         <div id="menu-container">
             <!-- placeholder -->
             <div id="menu1">
-                <a href="/pages/Alok.html">
+                <a href="./pages/Alok.html">
                 <div class="hidden aligner">
-                    <img src="/assets/alok.jpeg" class="circle">
+                    <img src="./assets/alok.jpeg" class="circle">
                     <span>Alok Singh Negi</span>
                     <span>B.Tech CSE</span>
                 </div>
                 </a>
             </div>
             <div id="menu2">
-                <a href="/pages/Ankit.html">
+                <a href="./pages/Ankit.html">
                 <div class="hidden aligner">
-                    <img src="/assets/ankit.bmp" class="circle">
+                    <img src="./assets/ankit.bmp" class="circle">
                     <span>Ankit Kumar</span>
                     <span>B.Tech CSE</span>
                 </div>
                 </a>
             </div>
             <div id="menu3">
-                <a href="/pages/Aryan.html">
+                <a href="./pages/Aryan.html">
                 <div class="hidden aligner">
-                    <img src="/assets/aryan.jpeg" class="circle">
+                    <img src="./assets/aryan.jpeg" class="circle">
                     <span>Aryan Mishra</span>
                     <span>B.Tech CSE</span>
                 </div>
                 </a>
             </div>
             <div id="menu4">
-                <a href="/pages/Waquar.html">
+                <a href="./pages/Waquar.html">
                 <div class="hidden aligner">
-                    <img src="/assets/waquar.jpeg" class="circle">
+                    <img src="./assets/waquar.jpeg" class="circle">
                     <span>Waquar Ahmed</span>
                     <span>B.Tech CSE</span>
                 </div>
@@ -83,7 +83,7 @@
                     <p><a href="https://www.instagram.com/mnnitalld/" class="btn btn--accent">Read more</a></p>
                 </div>
             <figure>
-                <img src="/assets/gate.png" alt="Image description">
+                <img src="./assets/gate.png" alt="Image description">
             </figure>
             </div>
         </li>
@@ -93,7 +93,7 @@
                 <p>after entry through ganga gate</p>
             </div>
             <figure>
-                <img src="/assets/road.jpeg" alt="Image description">
+                <img src="./assets/road.jpeg" alt="Image description">
             </figure>
             </div>
         </li>
@@ -103,7 +103,7 @@
                 <p>academic building of mnnit</p>
             </div>
             <figure>
-                <img src="/assets/academic_building.jpg" alt="Image description">
+                <img src="./assets/academic_building.jpg" alt="Image description">
             </figure>
             </div>
         </li>
@@ -113,7 +113,7 @@
                 <p>Swami Vivekanand Boys Hostal</p>
             </div>
             <figure>
-                <img src="/assets/svbh.jpeg" alt="Image description">
+                <img src="./assets/svbh.jpeg" alt="Image description">
             </figure>
             </div>
         </li>
@@ -123,7 +123,7 @@
                 <p>Room 335 and all members</p>
             </div>
             <figure>
-                <img src="/assets/room335.jpeg" alt="Image description">
+                <img src="./assets/room335.jpeg" alt="Image description">
             </figure>
             </div>
         </li>
@@ -133,7 +133,7 @@
                 <p>Room + study place</p>
             </div>
             <figure>
-                <img src="/assets/room.jpeg" alt="Image description">
+                <img src="./assets/room.jpeg" alt="Image description">
             </figure>
             </div>
         </li>
