--- a/ROOM335/pages/Waquar.html
+++ b/ROOM335/pages/Waquar.html
@@ -6,16 +6,16 @@
     <title>ROOM 335</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Press Start 2P|Source Code Pro">
-    <link rel='stylesheet' type='text/css' media='screen' href='/style/main2.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='.././style/main2.css'>
 </head>
 <body>
     <div id="page-layout" class="grid-container">
         <div class="grid-item item1">
-            <span><a href="/index.html" class="shed">ROOM 335</a></span>
+            <span><a href=".././index.html" class="shed">ROOM 335</a></span>
         </div>
         <div class="grid-item item2">
             <div class="profile-img">
-                <img src="/assets/waquar.jpeg">
+                <img src=".././assets/waquar.jpeg">
             </div>
         </div>
         <div class="grid-item item3">
@@ -35,7 +35,6 @@
     <div style="position: absolute; z-index: 1;">
         <canvas id="game-of-life"></canvas>
     </div>
-    <script src='gameoflife.js'></script>
+    <script src='./gameoflife.js'></script>
 </body>
-<script src='gameoflife.js'></script>
 </html>
